spacing of bear images corrected, spacing of why section finished

--- a/style.css
+++ b/style.css
@@ -7,8 +7,21 @@
 
 span {
   text-align: center;
-  display: block;
   display: grid;
+}
+
+div>section:nth-of-type(3) li strong {
+  position: absolute;
+  top: 940px;
+}
+
+li p {  
+  display: inline;
+  display: inline-flex;
+  color: green;
+  position: absolute;
+  top: 950px;
+  width: 320px;
 }
 
 h2 {
@@ -17,7 +30,7 @@ h2 {
 
 nav ul {
   display: grid;
-  grid-template: 40px / 3fr 2fr 1fr 1ft;
+  grid-template: 40px / 3fr 2fr 1fr 1fr;
   list-style: none;
   font-weight: bold;
 }
@@ -40,11 +53,11 @@ nav ul li:nth-of-type(3) {
 
 div>section:after {
   display: inline-block;
-    content: "";
-    border-top: 0.5px solid black;
-    width: 98%;
-    margin: 2 2 rem;
-    padding-top: 50px;
+  content: "";
+  border-top: 0.5px solid black;
+  width: 98%;
+  margin: 2 2 rem;
+  padding-top: 50px;
 }
 
 div>section:first-of-type {
@@ -114,7 +127,7 @@ div>section:nth-of-type(2), div>section:nth-of-type(4) p {
 div>section:nth-of-type(3) ul {
   display: flex;
   height: 200px;
-  width: 100%;
+  width: 80%;
   justify-content: space-between;
   flex-direction: row;
   list-style-type: none;
@@ -124,16 +137,9 @@ div>section:nth-of-type(3) ul {
   padding-right: 50px;
 }
 
-div>section:nth-of-type(3) ul {
-  min-width: 50px;
-  min-height: 50px;
-}
-
 div>section:nth-of-type(5) ul li img {
   border-radius: 50%;
   filter: grayscale(100%);
-  border: .7px solid lightgray;
-  padding: 5px;
   margin-left: 30px;
 }
 
@@ -144,7 +150,6 @@ div>section:nth-of-type(5) ul{
 }
 
 div>section:nth-of-type(5) ul li:nth-of-type(1) {
-  /* color: purple; */
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 1;
@@ -178,15 +183,36 @@ div>section:nth-of-type(5) ul li:nth-of-type(5) {
   grid-row-start: 2;
 }
 
+div>section:nth-of-type(5)::after {
+  border-top: none;
+}
+
 div>section:nth-of-type(6) ul {
   display: flex;
   justify-content: space-around;
   flex-direction: row;
   flex-wrap: wrap;
-  /* height: 400px; */
   width: 1200px;
   list-style: none;
   margin-left: 200px;
-  margin-right: 200 px; 
+  margin-right: 200px; 
   align-items: center;
+}
+
+div>section:last-of-type  {
+  display: grid;
+  grid-template: 175px / 1fr 1fr 1fr 1fr 1fr;
+}
+
+div>section:last-of-type div:first-of-type {
+  grid-column-start: 1;
+  grid-column-end: 2;
+}
+
+div>section:last-of-type div:last-of-type {
+  grid-column-start: 2;
+  grid-column-end: 3;
+}
+div>section:last-of-type:after {
+  border-top: none;
 }
